--- a/Front-End/plantilla.html
+++ b/Front-End/plantilla.html
@@ -11,20 +11,24 @@
   <header>
     <h1>TodoZapatillas</h1>
     <p>Encuentra tu estilo al mejor precio</p>
+    <nav>
+      <div class="nav_izquierda">
+        <a href="#">Inicio</a>
+        <a href="#">Productos</a>
+        <a href="#">Ofertas</a>
+        <a href="#">Soporte</a>
+      </div>
+      <div class="nav_cent">
+            <input type="text" id="buscador" placeholder="Buscar productos...">
+            <button>🔍</button>        
+      </div>
+      <div class="nav_derecha">
+        <a href="#">Carrito</a>
+        <a href="#">Iniciar Sesión/Registrar</a>
+      </div>
+    </nav>
   </header>
 
-  <nav>
-    <div class="nav_izquierda">
-      <a href="#">Inicio</a>
-      <a href="#">Productos</a>
-      <a href="#">Ofertas</a>
-      <a href="#">Soporte</a>
-    </div>
-    <div class="nav_derecha">
-      <a href="#">Carrito</a>
-      <a href="#">Iniciar Sesión</a>
-    </div>
-  </nav>
   
   <section>
     <div class="slider">
@@ -40,20 +44,21 @@
     </div>
     
   </section>
+
   <section class="productos">
     <div class="producto">
       <img src="" alt="Zapatilla 1">
       <h3>Zapatilla Urbana</h3>
       <p>$39.990</p>
-      <button class="boton-comprar">Comprar</button>
+      <p>Lorem ipsum dolor sit amet consectetur</p>
     </div>
     <div class="producto">
       <img src="" alt="Zapatilla 2">
       <h3>Zapatilla Deportiva</h3>
       <p>$44.990</p>
-      <button class="boton-comprar">Comprar</button>
+      <p>Lorem ipsum dolor sit amet consectetur</p>
     </div>
-
+    
   </section>
 
   <footer>
