--- a/Front-End/detalle.html
+++ b/Front-End/detalle.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detalle del Producto</title>
-  <link rel="stylesheet" href="css/NewStyle.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/styleNav.css" />
+  <link rel="stylesheet" href="css/styleCatalogo.css" />
 </head>
 <body>
   <header>
@@ -47,7 +47,7 @@
     </form>
 
     <div class="user-cart">
-        <a href="#" class="carrito" aria-label="Ver carrito">
+        <a href="carrito.html" class="carrito" aria-label="Ver carrito">
             🛒
             <span id="contador-carrito" class="cart-count">0</span>
         </a>
