--- a/Front-End/inicio.html
+++ b/Front-End/inicio.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TodoZapatillas - Menú Responsive</title>
-  <link rel="stylesheet" href="css/NewStyle.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/styleNav.css" />
+  <link rel="stylesheet" href="css/styleCatalogo.css" />
+  <link rel="stylesheet" href="css/styleCarrito.css" />
 </head>
 
 <body>
@@ -49,7 +50,7 @@
     </form>
 
     <div class="user-cart">
-        <a href="#" class="carrito" aria-label="Ver carrito">
+        <a href="carrito.html" class="carrito" aria-label="Ver carrito">
             🛒 <span id="contador-carrito" class="cart-count">0</span>
         </a>
         <div id="user-area">
