--- a/Front-End/carrito.html
+++ b/Front-End/carrito.html
@@ -68,8 +68,11 @@
   <ul id="productos-carrito"></ul>
 
   <div id="total-carrito"></div>
-
-  <button id="vaciar-carrito-btn" onclick="vaciarCarrito()">Vaciar Carrito</button>
+  <div class="contenedor-btn-carrito">
+    <button id="vaciar-carrito-btn" onclick="vaciarCarrito()">Vaciar Carrito</button>
+    <button class="comprar-carrito-btn" >Comprar</button>
+  </div>     
+  
 </div>
 
 <body>
