--- a/Front-End/carrito_test.html
+++ b/Front-End/carrito_test.html
@@ -16,7 +16,7 @@
 
   <nav class="menu-principal" id="menuPrincipal">
     <div class="menu-links">
-      <a href="inicio.html">Inicio</a>
+      <a href="/">Inicio</a>
 
       <div class="menu-con-submenu">
         <a href="#" class="submenu-toggle">Productos ▾</a>
